src/test/ui/rfc-2126-extern-absolute-paths/non-existent-2.stderr
error[E0433]: failed to resolve. Could not find `xcrate` in `{{root}}`
  --> $DIR/non-existent-2.rs:14:15
   |
LL |     let s = ::xcrate::S;
   |               ^^^^^^ Could not find `xcrate` in `{{root}}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
